better pick-and-place with observation

--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -36,7 +36,6 @@
     "# device = 'cpu'\n",
     "unit_len = 0.01\n",
     "\n",
-    "T_eg = SE3([ 0.707,  0.000,  0.000,  0.707,  0.000,  0.000, 0.150])\n",
     "T_observe_grasp = SE3([0.0, 0.0, 1.0, 0.0, 0.00, 0.0, 0.6])\n",
     "T_observe_scene = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6])"
    ]
@@ -134,9 +133,7 @@
    "outputs": [],
    "source": [
     "grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
-    "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)\n",
-    "scene_proc = scene_proc_fn(scene_raw).to(device)\n",
-    "grasp_proc = grasp_proc_fn(grasp_raw).to(device)"
+    "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
    ]
   },
   {
@@ -152,6 +149,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "scene_proc = scene_proc_fn(scene_raw).to(device)\n",
+    "grasp_proc = grasp_proc_fn(grasp_raw).to(device)\n",
+    "\n",
     "T_seed = 100\n",
     "pick_policy = 'sorted'\n",
     "pick_mh_iter = 1000\n",
@@ -162,7 +162,11 @@
     "pick_optim_lr = 0.005\n",
     "\n",
     "Ts, edf_outputs, logs = pick_agent.forward(scene=scene_proc, T_seed=T_seed, policy = pick_policy, mh_iter=pick_mh_iter, langevin_iter=pick_langevin_iter, \n",
-    "                                            temperature=pick_dist_temp, policy_temperature=pick_policy_temp, optim_iter=pick_optim_iter, optim_lr=pick_optim_lr)"
+    "                                            temperature=pick_dist_temp, policy_temperature=pick_policy_temp, optim_iter=pick_optim_iter, optim_lr=pick_optim_lr)\n",
+    "\n",
+    "T_eg = SE3([ 0.707,  0.000,  0.000,  0.707,  0.000,  0.000, 0.150])\n",
+    "pick_poses = recover_scale(SE3(Ts.cpu()))\n",
+    "pick_poses = SE3.multiply(pick_poses, T_eg.inv())"
    ]
   },
   {
@@ -178,8 +182,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pick_poses = recover_scale(SE3(Ts.cpu()))\n",
-    "pick_poses = SE3.multiply(pick_poses, T_eg.inv())\n",
     "pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
     "post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
    ]
@@ -211,11 +213,12 @@
     "                (pick_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
     "               ]\n",
     "\n",
-    "\n",
     "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
+    "plan_success = plan_results[-1]\n",
     "\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
+    "if plan_success:\n",
+    "    execution_results = env_interface.execute_plans(plans)\n",
+    "execution_success = execution_results[-1]"
    ]
   },
   {
@@ -462,7 +465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
