--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -85,9 +85,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pick_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275])\n",
+    "# pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
+    "# post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "pick_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.05, 0.0, 0.275])\n",
-    "pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
-    "post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
+    "_, pre_pick_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
+    "                                           cutoff_r = 0.03, dt=0.01, eps=1., iters=50,\n",
+    "                                           rel_pose=pick_poses)\n",
+    "post_pick_poses = pre_pick_poses"
    ]
   },
   {
@@ -97,7 +110,21 @@
    "outputs": [],
    "source": [
     "idx = 0\n",
-    "pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]"
+    "pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
+    "\n",
+    "colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(pick_pose)[0], r = colcheck_r)\n",
+    "print(f\"Collision-free Pick Pose: {not col_check}\")\n",
+    "assert not col_check, \"No collision-free pick pose found!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# draw_geometry([scene_raw] + grasp_raw.transformed(pre_pick_pose))"
    ]
   },
   {
@@ -143,9 +170,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Home position\n",
     "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
-    "print(result)\n",
-    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# result = env_interface.move_simple(target_poses = SE3([[0., 0., 1., 0., -0.1, 0., 0.6], \n",
     "#                                                        [0.5, -0.5, -0.5, -0.5, 0.0, 0., 0.5], \n",
     "#                                                        [1.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.5]]), \n",
@@ -215,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.30])\n",
+    "place_poses = SE3([0.5000, -0.5000, -0.5000, -0.5000, 0.12, -0.18, 0.31])\n",
     "_, pre_place_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
     "                                            cutoff_r = 0.03, dt=0.01, eps=1., iters=5,\n",
     "                                            rel_pose=place_poses)\n",
@@ -229,16 +264,12 @@
    "outputs": [],
    "source": [
     "idx = 0\n",
-    "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "draw_geometry([scene_raw]+grasp_raw.transformed(place_pose))"
+    "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
+    "\n",
+    "colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
+    "print(f\"Collision-free Place Pose: {not col_check}\")\n",
+    "assert not col_check, \"No collision-free place pose found!\""
    ]
   },
   {
