place edf not working well due to wrong weight field of the query model

--- a/edf_pnp_test.ipynb
+++ b/edf_pnp_test.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "from ros_edf.ros_interface import EdfRosInterface\n",
     "from edf.data import PointCloud, SE3, TargetPoseDemo, DemoSequence, DemoSeqDataset, save_demos\n",
-    "from edf.pc_utils import optimize_pcd_collision, draw_geometry\n",
+    "from edf.pc_utils import optimize_pcd_collision, draw_geometry, check_pcd_collision\n",
     "from edf.preprocess import Rescale, NormalizeColor, Downsample, ApplySE3\n",
     "from edf.agent import PickAgent, PlaceAgent\n",
     "\n",
@@ -34,10 +34,7 @@
    "source": [
     "device = 'cuda:0'\n",
     "# device = 'cpu'\n",
-    "unit_len = 0.01\n",
-    "\n",
-    "T_observe_grasp = SE3([0.0, 0.0, 1.0, 0.0, 0.00, 0.0, 0.6])\n",
-    "T_observe_scene = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6])"
+    "unit_len = 0.01"
    ]
   },
   {
@@ -182,8 +179,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_pick_poses = SE3.multiply(pick_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))\n",
-    "post_pick_poses = SE3.multiply(SE3([1., 0., 0., 0., 0., 0., 0.2]), pick_poses)"
+    "_, pre_pick_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
+    "                                           cutoff_r = 0.03, dt=0.01, eps=1., iters=50,\n",
+    "                                           rel_pose=pick_poses)\n",
+    "post_pick_poses = pre_pick_poses"
    ]
   },
   {
@@ -199,8 +198,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
-    "pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]"
+    "# idx = 0\n",
+    "# pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
+    "for idx in range(10):\n",
+    "    pick_pose, pre_pick_pose, post_pick_pose = pick_poses[idx], pre_pick_poses[idx], post_pick_poses[idx]\n",
+    "    \n",
+    "    colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "    col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(pick_pose)[0], r = colcheck_r)\n",
+    "    print(f\"Pick Pose_{idx} collision-free: {not col_check}\")\n",
+    "    if not col_check:\n",
+    "        break\n",
+    "    \n",
+    "assert not col_check, \"No collision-free pick pose found!\""
    ]
   },
   {
@@ -209,40 +218,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_targets = [(pre_pick_pose, \"default\", {}),\n",
-    "                (pick_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
-    "               ]\n",
+    "pick_result = env_interface.pick(pre_pick_pose, pick_pose, post_pick_pose)\n",
+    "print(pick_result)\n",
+    "assert pick_result, \"Pick Fail\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert pick_result, \"Pick Fail\"\n",
     "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "plan_success = plan_results[-1]\n",
-    "\n",
-    "if plan_success:\n",
-    "    execution_results = env_interface.execute_plans(plans)\n",
-    "execution_success = execution_results[-1]"
+    "env_interface.detach()\n",
+    "env_interface.attach_placeholder() # To avoid collsion with the grasped object"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Grasp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if execution_results[-1] is True:\n",
-    "    grasp_results = env_interface.grasp()"
+    "# Observe for Place"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Move to Post-pick Pose"
+    "### Observe Gripper"
    ]
   },
   {
@@ -251,27 +255,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_targets = [(post_pick_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Place"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Observe Hand"
+    "# Home position\n",
+    "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
+    "print(result)"
    ]
   },
   {
@@ -280,23 +266,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_targets = [(T_observe_grasp, \"default\", {}),\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
-    "env_interface.attach(pcd = grasp_raw)"
+    "if result == 'SUCCESS':\n",
+    "    env_interface.detach()\n",
+    "    grasp_raw = env_interface.observe_eef(obs_type = 'pointcloud', update = True)\n",
+    "    env_interface.attach(obj = grasp_raw)"
    ]
   },
   {
@@ -312,13 +285,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_targets = [(T_observe_scene, \"default\", {}),\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
+    "result = env_interface.move_simple(target_poses = SE3([0.0, 0.0, 1.0, 0.0, -0.4, 0.4, 0.6]))\n",
+    "print(result)"
    ]
   },
   {
@@ -327,7 +295,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+    "if result == 'SUCCESS':\n",
+    "    scene_raw = env_interface.observe_scene(obs_type = 'pointcloud', update = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = env_interface.move_simple(target_poses = SE3([0., 0., 1., 0., -0.1, 0., 0.6]))\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Place"
    ]
   },
   {
@@ -364,7 +350,9 @@
     "place_query_temp = 1.\n",
     "\n",
     "Ts, edf_outputs, logs = place_agent.forward(scene=scene_proc, T_seed=T_seed, grasp=grasp_proc, policy = place_policy, mh_iter=place_mh_iter, langevin_iter=place_langevin_iter, \n",
-    "                                            temperature=place_dist_temp, policy_temperature=place_policy_temp, optim_iter=place_optim_iter, optim_lr=place_optim_lr, query_temperature=place_query_temp)"
+    "                                            temperature=place_dist_temp, policy_temperature=place_policy_temp, optim_iter=place_optim_iter, optim_lr=place_optim_lr, query_temperature=place_query_temp)\n",
+    "\n",
+    "place_poses = recover_scale(SE3(Ts.cpu()))"
    ]
   },
   {
@@ -380,9 +368,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "place_poses = recover_scale(SE3(Ts.cpu()))\n",
-    "_, pre_place_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, cutoff_r = 0.03, dt=0.01, eps=1., iters=5, rel_pose=place_poses)\n",
-    "post_place_poses = SE3.multiply(place_poses, SE3([1., 0., 0., 0., 0., 0., -0.1]))"
+    "_, pre_place_poses = optimize_pcd_collision(x=scene_raw, y=grasp_raw, \n",
+    "                                            cutoff_r = 0.03, dt=0.01, eps=1., iters=5,\n",
+    "                                            rel_pose=place_poses)\n",
+    "post_place_poses = place_poses * pick_pose.inv() * pre_pick_pose"
    ]
   },
   {
@@ -391,8 +380,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "idx = 0\n",
-    "place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]"
+    "# idx = 0\n",
+    "# place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
+    "for idx in range(10):\n",
+    "    place_pose, pre_place_pose, post_place_pose = place_poses[idx], pre_place_poses[idx], post_place_poses[idx]\n",
+    "    \n",
+    "    colcheck_r = 0.003 # Should be similar to voxel filter size\n",
+    "    col_check = check_pcd_collision(x=scene_raw, y=grasp_raw.transformed(place_pose)[0], r = colcheck_r)\n",
+    "    print(f\"Place Pose_{idx} collision-free: {not col_check}\")\n",
+    "    if not col_check:\n",
+    "        break\n",
+    "    \n",
+    "assert not col_check, \"No collision-free place pose found!\""
    ]
   },
   {
@@ -401,8 +400,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# draw_geometry([scene_raw, grasp_raw.transformed(place_pose)[0]])\n",
-    "# draw_geometry([scene_raw, grasp_raw.transformed(pre_place_pose)[0]])"
+    "result = env_interface.place(pre_place_pose, place_pose, post_place_pose)\n",
+    "print(result)"
    ]
   },
   {
@@ -411,41 +410,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plan_targets = [(pre_place_pose, \"default\", {}),\n",
-    "                (place_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "assert result, \"Place fail!\"\n",
     "env_interface.detach()\n",
     "env_interface.release()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plan_targets = [(post_place_pose, \"cartesian\", {'cartesian_step': 0.01, 'cspace_step_thr': 10., 'avoid_collision': False, 'success_fraction': 0.95}),\n",
-    "               ]\n",
-    "\n",
-    "\n",
-    "plan_results, plans = env_interface.move_plans(targets=plan_targets)\n",
-    "\n",
-    "if plan_results[-1] is True:\n",
-    "    execution_results = env_interface.execute_plans(plans)"
    ]
   }
  ],
