--- a/pick_and_place.ipynb
+++ b/pick_and_place.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "env_interface.detach()\n",
-    "env_interface.attach_placeholder() # To avoid collsion with mug"
+    "env_interface.attach_placeholder() # To avoid collsion with the grasped object"
    ]
   },
   {
@@ -289,6 +289,9 @@
    "outputs": [],
    "source": [
     "assert result == 'SUCCESS'\n",
+    "env_interface.detach()\n",
+    "env_interface.release()\n",
+    "\n",
     "place_demo = TargetPoseDemo(target_poses=place_poses, scene_pc=scene_raw, grasp_pc=grasp_raw)"
    ]
   },
@@ -327,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
