visualization with dash and plotly

--- a/visualize_train_log.ipynb
+++ b/visualize_train_log.ipynb
@@ -34,35 +34,7 @@
    "source": [
     "agent_config_dir = \"config/agent_config/place_agent_dev.yaml\"\n",
     "train_config_dir = \"config/train_config/train_place_dev.yaml\"\n",
-    "agent_param_dir = \"checkpoint/mug_10_demo/place_dev\"\n",
-    "\n",
-    "with open(train_config_dir) as file:\n",
-    "    config = yaml.load(file, Loader=yaml.FullLoader)\n",
-    "device = 'cpu' # config['device']\n",
-    "unit_len = config['characteristic_length']\n",
-    "temperature = config['temperature']\n",
-    "max_epochs = config['max_epochs']\n",
-    "N_transform_init = config['N_transform_init']\n",
-    "mh_iter_init = config['mh_iter_init']\n",
-    "langevin_iter_init = config['langevin_iter_init']\n",
-    "langevin_begin_epoch = config['langevin_begin_epoch']\n",
-    "report_freq = config['report_freq']\n",
-    "init_CD_ratio = config['init_CD_ratio']\n",
-    "end_CD_ratio = config['end_CD_ratio']\n",
-    "CD_end_iter = config['CD_end_iter']\n",
-    "lr_se3T = config['lr_se3T']\n",
-    "lr_energy_fast = config['lr_energy_fast']\n",
-    "lr_energy_slow = config['lr_energy_slow']\n",
-    "lr_query_fast = config['lr_query_fast']\n",
-    "lr_query_slow = config['lr_query_slow']\n",
-    "std_theta_perturb = config['std_theta_degree_perturb'] / 180 * np.pi\n",
-    "std_X_perturb = config['std_X_perturb']\n",
-    "edf_norm_std = config['edf_norm_std']\n",
-    "query_anneal_end_iter = config['query_anneal_end_iter']\n",
-    "query_init_temp = config['query_init_temp']\n",
-    "query_end_temp = config['query_end_temp']\n",
-    "elbo_end_iter = config['elbo_end_iter']\n",
-    "langevin_dt = config['langevin_dt']"
+    "agent_param_dir = \"checkpoint/mug_10_demo/place_dev\""
    ]
   },
   {
@@ -71,29 +43,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_logs = gzip_load(dir=agent_param_dir, filename=f\"trainlog_iter_{1}.gzip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_logs['scene_raw'] = train_logs['scene_raw'].to('cpu')\n",
-    "train_logs['grasp_raw'] = train_logs['grasp_raw'].to('cpu')\n",
-    "train_logs['scene_proc'] = train_logs['scene_proc'].to('cpu')\n",
-    "train_logs['grasp_proc'] = train_logs['grasp_proc'].to('cpu')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "train_logs = gzip_load(dir=agent_param_dir, filename=f\"trainlog_iter_{1}.gzip\")\n",
     "scene_raw: PointCloud = train_logs['scene_raw']\n",
-    "grasp_raw: PointCloud = train_logs['grasp_raw']"
+    "grasp_raw: PointCloud = train_logs['grasp_raw']\n",
+    "query_points = train_logs['edf_outputs']['query_points']\n",
+    "query_attention = train_logs['edf_outputs']['query_attention']\n",
+    "target_pose = SE3(train_logs['target_T'])\n",
+    "best_pose = SE3(train_logs['best_neg_T'])\n",
+    "sampled_poses= SE3(train_logs['sampled_Ts'])"
    ]
   },
   {
@@ -115,21 +72,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = get_plotly_fig()\n",
-    "fig = fig.add_traces([grasp_pl, query_pl])\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_pcd = PointCloud.merge(scene_raw, grasp_raw.transformed(SE3(train_logs['target_T']))[0])\n",
-    "sample_pcd = PointCloud.merge(scene_raw, grasp_raw.transformed(SE3(train_logs['best_neg_T']))[0])\n",
+    "target_pcd = PointCloud.merge(scene_raw, grasp_raw.transformed(target_pose)[0])\n",
     "target_pl = target_pcd.plotly(point_size=1.0)\n",
-    "sample_pl = sample_pcd.plotly(point_size=1.0)"
+    "fig_target = get_plotly_fig(\"Target Placement\")\n",
+    "fig_target = fig_target.add_traces([target_pl])"
    ]
   },
   {
@@ -138,24 +84,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = get_plotly_fig()\n",
-    "fig = fig.add_traces([sample_pl])\n",
-    "fig.show()"
+    "best_sample_pcd = PointCloud.merge(scene_raw, grasp_raw.transformed(best_pose)[0])\n",
+    "best_sample_pl = best_sample_pcd.plotly(point_size=1.0)\n",
+    "sample_pl = PointCloud.points_to_plotly(pcd=sampled_poses.points, point_size=7.0, colors=[0.2, 0.5, 0.8])\n",
+    "fig_sample = get_plotly_fig(\"Sampled Placement\")\n",
+    "fig_sample = fig_sample.add_traces([best_sample_pl, sample_pl])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -209,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.16 (default, Jan 17 2023, 23:13:24) \n[GCC 11.2.0]"
   },
   "vscode": {
    "interpreter": {
